[package]
name = "silksong-data-dump"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8"
anyhow = "1.0"
base64 = "0.22"
csv = "1.3.1"
ecb = { version = "0.1", features = ["std"] }
indexmap = "2.11"
quick-xml = { version = "0.38", features = ["serde", "serialize"] }
rabex-env = { git = "https://github.com/jakobhellermann/rabex-env" }
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
steamlocate = "2.0"
