[package]
name = "silksong-data-dump"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8"
anyhow = "1.0"
base64 = "0.22"
csv = "1.3.1"
ecb = { version = "0.1", features = ["std"] }
indexmap = "2.11"
num_enum = "0.7.4"
quick-xml = { version = "0.38", features = ["serde", "serialize"] }
rabex-env = { git = "https://github.com/jakobhellermann/rabex-env", features = ["serde_path_to_error"] }
serde = "1.0"
serde_derive = "1.0.219"
serde_json = "1.0"
serde_repr = "0.1"
steamlocate = "2.0"

[patch."https://github.com/jakobhellermann/rabex-env"]
rabex-env = { path = "/home/jakob/dev/unity/rabex-env" }
[patch."https://github.com/jakobhellermann/RustyAssetBundleEXtractor"]
rabex = { path = "/home/jakob/dev/unity/RustyAssetBundleEXtractor" }
